<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="carlostapiadominguez.registrodesuperheroes.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:id="@+id/imageLayou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/hero"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/shield"
            android:layout_alignParentEnd="true"
            />

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_alignBottom="@id/hero"
            android:layout_alignTop="@id/hero"
            android:layout_toStartOf="@+id/hero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:imeOptions="actionNext"
                />
            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:layout_marginTop="10dp"
                android:inputType="textPersonName"
                android:imeOptions="actionNext"
                />


        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageLayou">

        <EditText
            android:id="@+id/nameHero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nameHero"
            android:layout_marginTop="12dp"
            android:inputType="textPersonName"
            android:imeOptions="actionNext"
            />
        <EditText
            android:id="@+id/edad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edad"
            android:layout_marginTop="12dp"
            android:inputType="numberDecimal"
            android:imeOptions="actionNext"
            />
        <EditText
            android:id="@+id/direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/direccion"
            android:layout_marginTop="12dp"
            android:inputType="text"
            android:imeOptions="actionNext"
            />
        <EditText
            android:id="@+id/ciudad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ciudad"
            android:layout_marginTop="12dp"
            android:inputType="textPersonName"
            android:imeOptions="actionGo"
            />

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:text="@string/registrar" />
    </LinearLayout>
    </RelativeLayout>
    </ScrollView>


</RelativeLayout>
